# Structured-RAG

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
config/books/: laxmikanth_6.yaml
data/eval/: laxmikanth_6.jsonl
docs/: architecture.md  architecture.mmd
litellm/: config.yaml
scripts/: ask.py  build_graph.py  calibrate_pages.py  embed.py  evaluate.py  evaluate_generation.py  evaluate_judge.py  ingest.py  retrieve.py  seed_langfuse_models.py  visualize_graph.py
src/upsc_rag/: __init__.py  config.py  observability.py
src/upsc_rag/agent/: __init__.py  build.py  nodes.py  runner.py  state.py  tools.py
src/upsc_rag/api/: __init__.py  app.py  cache.py
src/upsc_rag/chunking/: __init__.py  structured.py
src/upsc_rag/enrichment/: __init__.py  articles_catalog.py  metadata.py
src/upsc_rag/eval/: generation.py  harness.py  judge.py
src/upsc_rag/generation/: __init__.py  answer.py  condense.py  live_scores.py  router.py  sources.py
src/upsc_rag/graph/: __init__.py  build.py  nodes.py  runner.py  state.py
src/upsc_rag/indexing/: __init__.py  embedder.py  graph_store.py  qdrant_store.py  store.py
src/upsc_rag/llm/: __init__.py  clients.py
src/upsc_rag/parsing/: __init__.py  align.py  pdf.py  toc.py
src/upsc_rag/pipeline/: __init__.py  embed.py  ingest.py
src/upsc_rag/retrieval/: __init__.py  hybrid.py  rerank.py  rewrite.py  sufficiency.py  web.py
tests/: conftest.py  test_answer_cache.py  test_chunking.py  test_config.py  test_eval_metrics.py  test_fusion.py  test_graceful_degradation.py  test_router.py  test_sources.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx  types.ts
web/app/api/ask/: route.ts
