[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upsc-rag"
version = "0.1.0"
description = "Structured RAG for UPSC polity textbooks (e.g. M. Laxmikanth)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "pymupdf>=1.24",
    "openai>=1.30",
    "qdrant-client>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
upsc-rag-ingest = "upsc_rag.pipeline.ingest:main"
upsc-rag-embed = "upsc_rag.pipeline.embed:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]
