[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upsc-rag"
version = "0.1.0"
description = "Structured RAG for UPSC polity textbooks (e.g. M. Laxmikanth)"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# E402: scripts/CLIs deliberately call load_dotenv() before importing the app
#       packages so env vars are set at import time — a repo-wide intentional pattern.
# E731/E741: pre-existing style nits in scripts/eval, not worth churning.
ignore = ["E402", "E731", "E741"]
